--- a/credit_card_payment-master/application.yaml
+++ b/credit_card_payment-master/application.yaml
@@ -1,15 +1,16 @@
 spring:
   datasource:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/test?useSSL=false
-      username: root
-      password: Chenna@123
-      hikari:
-        initialization-fail-timeout: 0
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://${MYSQL_HOST}/${MYSQL_DATABASE}?allowPublicKeyRetrieval=true&useSSL=false
+    username: ${MYSQL_USER}
+    password: ${MYSQL_PASSWORD}
+    hikari:
+      initialization-fail-timeout: 0
+      
+      
   jpa:
-      database-platform: org.hibernate.dialect.MySQL5Dialect
-      generate-ddl: true
-      show-sql: true
-      hibernate:
-        ddl-auto: create-drop
-        
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    generate-ddl: true
+    show-sql: true
+    hibernate:
+      ddl-auto: update
