--- a/credit_card_payment-master/src/main/resources/application.properties
+++ b/credit_card_payment-master/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 #Port
-#server.port = 8080
-
+server.port = 8318
+MYSQL_HOST: localhost:3306
+MYSQL_USER: root
+MYSQL_ROOT_PASSWORD: Chenna@123
+MYSQL_DATABASE: test123
+MYSQL_PASSWORD: Chenna@123
 # Database Configuration
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=Chenna@123
-
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
 #spring.mvc.pathmatch.matching-strategy=ant-path-matcher
